# RoleRush

./: .env.example  .gitignore  ARQUITETURA.md  PROJECT_PLAN.md  README.md  config.yaml  pyproject.toml  vagas.db
.github/workflows/: monitor.yml
src/monitor/: config.py  filters.py  main.py  models.py  notifier.py  storage.py
src/monitor/sources/: adzuna.py  arbeitnow.py  base.py  github_repo.py  himalayas.py  remoteok.py  remotive.py
tests/: test_filters.py  test_sources.py  test_storage.py
