[project]
name = "rolerush"
version = "0.1.0"
description = "Role Rush: coleta vagas de fontes configuráveis, filtra pelo meu perfil, deduplica e notifica no Telegram — rodando de graça via GitHub Actions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[project.scripts]
rolerush = "monitor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monitor"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
